@@ -1,3 +1,9 @@
+globus-gridmap-eppn-callout (1.14-1+gt6.@distro@) @distro@; urgency=low
+
+  * add environment variable GLOBUS_EPPN_KEEP_DOMAIN to return full userid@domain from eppn
+
+ -- Globus Toolkit <support@globus.org>  Tue, 05 Mar 2019 10:47:44 -0600
+
 globus-gridmap-eppn-callout (1.13-2+gt6.@distro@) @distro@; urgency=low
 
   * Update for el.5 openssl101e
